--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -62,6 +62,7 @@ h1 {
   color: var(--Green);
 }
 .links-infos {
+ width: 250px;
   margin-top: 20px;
   display: flex;
   flex-direction: column;
@@ -69,7 +70,7 @@ h1 {
 }
 .links-infos button {
   font-size: 14px;
-  width: 300px;
+  width: 100%;
   padding: 10px;
   border-radius: 10px;
   background-color: var(--Grey-700);
